--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -63,6 +63,9 @@
               (click)="isCollapsed = true">
               {{ t('proxy_generator') }}
             </a>
+            <a ngbDropdownItem routerLink="/vtes-ai" [routerLinkActive]="['active']" (click)="isCollapsed = true">
+              {{ t('vtes_ai_chat') }}
+            </a>
             <button ngbDropdownItem (click)="openTableSeatingModal()" gaEvent="referral" gaCategory="vtesdle">
               {{ t('table_seating') }}
             </button>
