--- a/src/styles.scss
+++ b/src/styles.scss
@@ -171,6 +171,14 @@ blockquote p {
   font-size: 0.9rem !important;
 }
 
+.fs-8 {
+  font-size: 0.75rem !important;
+}
+
+.fs-9 {
+  font-size: 0.6rem !important;
+}
+
 .text-gold {
   color: #ffd700;
 }
