--- a/src/app/modules/vtes-ai/vtes-ai.component.html
+++ b/src/app/modules/vtes-ai/vtes-ai.component.html
@@ -179,8 +179,9 @@
           <div class="input-group">
             <input formControlName="question" type="text"
               class="form-control px-4 py-3 pe-5 bg-light text-black border-1 rounded-4"
-              [placeholder]="t('send_message')" />
-            <button class="ia-send-button btn position-absolute end-0 top-50 translate-middle-y me-2" type="submit">
+              [placeholder]="t('send_message')" [disabled]="!!(loading$ | async)" />
+            <button class="ia-send-button btn position-absolute end-0 top-50 translate-middle-y me-2" type="submit"
+              [disabled]="!!(loading$ | async) || chatForm.invalid">
               <i class="bi bi-send"></i>
             </button>
           </div>
