--- a/src/app/modules/vtes-ai/vtes-ai.component.html
+++ b/src/app/modules/vtes-ai/vtes-ai.component.html
@@ -165,7 +165,8 @@
         }
         @if(loading$ | async){
         <div class="row justify-content-start align-items-center mt-2" #item>
-          <app-loading class="w-auto" [size]="2" [margin]="2" [text]="(thinking$ | async) ? t('thinking') : ''" />
+          @let message = thinkingMessage$ | async;
+          <app-loading class="w-auto" [size]="2" [margin]="2" [text]="message ? t(message) : undefined" />
         </div>
         }
         }
@@ -179,7 +180,7 @@
           <div class="input-group">
             <input formControlName="question" type="text"
               class="form-control px-4 py-3 pe-5 bg-light text-black border-1 rounded-4"
-              [placeholder]="t('send_message')" [disabled]="!!(loading$ | async)" />
+              [placeholder]="t('send_message')" />
             <button class="ia-send-button btn position-absolute end-0 top-50 translate-middle-y me-2" type="submit"
               [disabled]="!!(loading$ | async) || chatForm.invalid">
               <i class="bi bi-send"></i>
