--- a/src/app/modules/decks/decks.component.html
+++ b/src/app/modules/decks/decks.component.html
@@ -43,6 +43,8 @@
                 <option value="VIEWS">{{ t('views') }}</option>
                 <option value="COMMENTS">{{ t('comments') }}</option>
                 <option value="PLAYERS">{{ t('players_twd') }}</option>
+                <option value="CHEAPEST">{{ t('price_cheapest') }}</option>
+                <option value="EXPENSIVE">{{ t('price_expensive') }}</option>
               </select>
             </div>
           </div>
