--- a/src/app/modules/deck-shared/library-grid-card/library-grid-card.component.html
+++ b/src/app/modules/deck-shared/library-grid-card/library-grid-card.component.html
@@ -21,8 +21,8 @@
       [errorImage]="cdnDomain + library.image" [alt]="library.i18n?.name ?? library.name" [offset]="100" />
     <!-- Warning icon for banned or unreleased -->
     @if(library.banned || library.unreleased){
-    <span class="position-absolute top-0 end-0 m-2">
-      <i class="bi bi-exclamation-triangle-fill text-warning fs-4"
+    <span class="position-absolute top-0 end-0 m-2" [class.me-5]="card().number > 0">
+      <i class="bi bi-exclamation-triangle-fill text-warning fs-5"
         [ngbTooltip]="library.banned ? ('deck_shared.banned' | transloco) : ('deck_shared.unreleased' | transloco)"
         placement="left" container="body"></i>
     </span>
