--- a/src/app/modules/decks/decks.component.scss
+++ b/src/app/modules/decks/decks.component.scss
@@ -7,8 +7,12 @@ header {
 .back-to-top {
   position: fixed;
   bottom: 25px;
-  right: 25px;
+  right: 85px;
   z-index: 1001;
+
+  @media (max-width: 768px) {
+    right: 25px;
+  }
 }
 
 .filters-desktop {
