--- a/src/app/modules/deck-card/deck-card.component.html
+++ b/src/app/modules/deck-card/deck-card.component.html
@@ -16,7 +16,7 @@
           </span>
           @if(deck.stats.price) {
           <span class="small text-black fw-medium">
-            {{ deck.stats.price | currency:deck.stats.currency }}
+            {{ deck.stats.price | currency:deck.stats.currency:'symbol':'1.0-0' }}
           </span>
           }
         </div>
