feat: add recentlyCreated field to ApiDeck and update UI to display new deck badges

--- a/src/app/modules/deck-card/deck-card.component.html
+++ b/src/app/modules/deck-card/deck-card.component.html
@@ -105,6 +105,11 @@
         </span>
         <span class="text-dark mx-1">•</span>
         <span class="text-dark">{{ deck.creationDate | translocoDate: { dateStyle: 'long' } }}</span>
+        @if (deck.recentlyCreated) {
+        <span class="badge text-bg-success ms-1">
+          {{ 'shared.new' | transloco }}
+        </span>
+        }
       </div>
 
       @if (deck.tags; as tags) {
