Revert "feat: add recentlyCreated field to ApiDeck and update UI to display new deck badges"
This reverts commit 3c0940a82f0a1a2d047e3b94847d3e842b2a7a9e.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -94,7 +94,7 @@ $handleBgColor: var(--bs-primary-rgb);
 }
 
 .bi-fs-sm {
-  font-size: 0.75em !important;
+  font-size: 0.7em;
 }
 /** Button icon **/
 
