--- a/src/app/modules/collection/collection-cards-list/collection-cards-list.component.scss
+++ b/src/app/modules/collection/collection-cards-list/collection-cards-list.component.scss
@@ -55,3 +55,13 @@ th[appSortable].desc:before {
   transform: rotate(180deg);
   -ms-transform: rotate(180deg);
 }
+
+.card-fade-in {
+  opacity: 1;
+  transition: opacity 300ms ease;
+}
+
+.card-fade-out {
+  opacity: 0;
+  transition: opacity 300ms ease;
+}
