--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -128,7 +128,7 @@
                   <span
                     class="position-absolute top-0 end-0 translate-middle badge rounded-pill bg-warning text-dark shadow-sm fw-semibold"
                     style="z-index: 2; font-size: 0.75rem;">
-                    <i class="bi bi-fs-sm bi-stars" style="font-size: 0.75rem;"></i> {{ t('new') }}
+                    BETA
                   </span>
                   <i class="bi bi-chat-dots"></i>
                   <span>{{ 'shared.vtes_ai_chat' | transloco }}</span>
