feat: add locale support to shop info and implement displayLocale pipe

--- a/src/app/modules/deck-shared/card-info/card-info.component.html
+++ b/src/app/modules/deck-shared/card-info/card-info.component.html
@@ -90,6 +90,9 @@
             @if(shop.set){
             - {{ shop.set }}
             }
+            @if(shop.locale){
+            - {{ shop.locale | displayLocale }}
+            }
           </span>
           <span class="fw-medium">{{ shop.price | currency:shop.currency }}</span>
         </a>
