fix: update price display to use msrp field in deck stats

--- a/src/app/modules/deck-shared/card-info/card-info.component.html
+++ b/src/app/modules/deck-shared/card-info/card-info.component.html
@@ -75,7 +75,7 @@
           @if( deck.filterCards?.[0]?.number; as number ){
           <span class="badge bg-primary me-2">{{ number }}x {{ deck.name }} ({{ deck.year }})</span>
           }
-          <span class="fw-medium">{{ deck.stats.price | currency:deck.stats.currency }}</span>
+          <span class="fw-medium">{{ deck.stats.msrp | currency:deck.stats.currency }}</span>
         </a>
       </div>
       }
