fix: apply title case transformation to shop locale display

--- a/src/app/modules/deck-shared/card-info/card-info.component.html
+++ b/src/app/modules/deck-shared/card-info/card-info.component.html
@@ -91,7 +91,7 @@
             - {{ shop.set }}
             }
             @if(shop.locale){
-            - {{ shop.locale | displayLocale }}
+            - {{ shop.locale | displayLocale | titlecase}}
             }
           </span>
           <span class="fw-medium">{{ shop.price | currency:shop.currency }}</span>
