--- a/src/app/modules/deck-archetypes/deck-archetypes.component.html
+++ b/src/app/modules/deck-archetypes/deck-archetypes.component.html
@@ -2,11 +2,20 @@
   @let isMaintainer = isMaintainer$ | async;
   <div class="d-flex justify-content-between align-items-center mb-3">
     <h3 class="mb-0 text-start">{{ t('title') }}</h3>
-    @if (isMaintainer) {
-    <button class="btn btn-sm btn-primary" (click)="openModal()">
-      {{ t('create') }}
-    </button>
-    }
+    <div class="d-flex gap-2 align-items-center flex-nowrap">
+      {{ t('show_from_last') }}
+      <select class="form-select form-select-sm w-auto" [formControl]="metaTypeControl" aria-label="Select meta type">
+        <option value="TOURNAMENT_90">{{ t('meta_type.90_days') }}</option>
+        <option value="TOURNAMENT_180">{{ t('meta_type.180_days') }}</option>
+        <option value="TOURNAMENT_365">{{ t('meta_type.365_days') }}</option>
+        <option value="TOURNAMENT">{{ t('meta_type.all_time') }}</option>
+      </select>
+      @if (isMaintainer) {
+      <button class="btn btn-sm btn-primary" (click)="openModal()">
+        {{ t('create') }}
+      </button>
+      }
+    </div>
   </div>
 
   <div class="row g-3 card-deck-archetype">
