--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -166,6 +166,9 @@
 
   <app-ad-sense adClient="ca-pub-7379021241824282" adSlot="6580167823" adFormat="auto" fullWidthResponsive="true" />
 
+  <!-- Top Archetypes (homepage preview) -->
+  <app-home-meta-game class="mt-3" />
+
   <!-- Popular and Newest Decks -->
   <div class="row mt-3">
     <app-home-section class="col-md-12 col-lg-6 my-3" [title]="t('popular_tournament')"
