--- a/src/app/modules/deck-archetypes/deck-archetype-card/deck-archetype-card.component.html
+++ b/src/app/modules/deck-archetypes/deck-archetype-card/deck-archetype-card.component.html
@@ -5,11 +5,15 @@
     <h5 class="card-title d-flex flex-row align-items-center justify-content-start">
       @if (archetype.icon) {
       <span class="me-2">
-        <i class="vtes" [class]="archetype.icon"></i>
+        <i class="vtes vtes-small" [class]="archetype.icon"></i>
       </span>
       }
+      @if(archetype.deckId) {
       <a class="text-decoration-none" [routerLink]="['/deck', archetype.deckId]">{{ archetype.name }}</a>
-      @if (isMaintainer) {
+      }@else {
+      {{ archetype.name }}
+      }
+      @if (isMaintainer && archetype.id > 0) {
       <span class="text-success ms-2">
         @if (archetype.enabled) {
         ✓
@@ -29,32 +33,28 @@
     </h5>
     <h6 class="card-subtitle mb-2 text-muted small">{{ archetype.type }}</h6>
   </div>
-  <div class="card-body d-flex flex-column">
-    <div class="card-text mb-2 text-muted small description-preview flex-grow-1">
-      <app-markdown-text [data]="archetype.description"></app-markdown-text>
-    </div>
-    <div class="d-flex justify-content-between align-items-center mt-auto">
-      <div class="d-flex align-items-center gap-2 ms-auto">
-        <a class="text-decoration-none small text-primary d-inline-flex align-items-center" [routerLink]="['/decks']"
-          [queryParams]="{ archetype: archetype.id }" aria-label="{{ t('decks_with_archetype') }}">
-          {{ t('decks_with_archetype') }}
-          @if(archetype.deckCount > 0) {
-          <span class="badge bg-primary ms-2 deck-badge">{{ archetype.deckCount }}</span>
-          }
-        </a>
-      </div>
-    </div>
+  <div class="card-body d-flex flex-column text-muted small">
+    <app-markdown-text [data]="archetype.description"></app-markdown-text>
   </div>
-  <div class="card-footer text-body-secondary">
+  <div class="card-footer text-body-secondary small">
     <span class="float-start" [innerHTML]="t('meta', {
       percentage: (metaPercentage | number:'1.0-2'),
       count: archetype.metaCount
     })"></span>
     @if(archetype.price) {
-    <span class="float-end">
+    <span class="float-start ms-2">
       {{ archetype.price | currency: archetype.currency }}
     </span>
     }
+    <div class="float-end d-flex align-items-center gap-2 ms-auto">
+      <a class="text-decoration-none text-primary d-inline-flex align-items-center" [routerLink]="['/decks']"
+        [queryParams]="{ archetype: archetype.id }" aria-label="{{ t('decks_with_archetype') }}">
+        {{ t('decks_with_archetype') }}
+        @if(archetype.deckCount > 0) {
+        <span class="badge bg-primary ms-2 deck-badge">{{ archetype.deckCount }}</span>
+        }
+      </a>
+    </div>
   </div>
 </div>
 }
