--- a/src/app/modules/deck-archetypes/deck-archetype-card/deck-archetype-card.component.html
+++ b/src/app/modules/deck-archetypes/deck-archetype-card/deck-archetype-card.component.html
@@ -31,7 +31,7 @@
       </div>
       }
     </h5>
-    <h6 class="card-subtitle mb-2 text-muted small">{{ archetype.type }}</h6>
+    <h6 class="card-subtitle text-muted small">{{ archetype.type }}</h6>
   </div>
   <div class="card-body d-flex flex-column text-muted small">
     <app-markdown-text [data]="archetype.description"></app-markdown-text>
